[package]
name = "morphius"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A tool to randomize test generation to eliminate cheating."
readme = "README.md"
repository = "https://github.com/Sapo-Dorado/morphius"
keywords = ["random", "tests", "cheating","template", "generate"]
categories = ["mathematics", "template-engine"]
exclude = ["examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
itertools = "0.10.3"
rand = "0.8.5"
mexprp = "0.3.0"